# Allocation

./: .gitignore  CICS110.py  Fall 2023 Schedule-2.xlsx  Fall2023.xlsx  Fall_2023_Schedule-2-2.xlsx  README.md  agent_functions.py  agent_utils.py  allocation_functions.py  allocation_utils.py  conflict_matrix.py  course_info.py  data_utils.py  fall2023schedule-2.xlsx  fall2023schedule.csv  fall2023schedule.xlsx  hist_example.py  instructions.txt  item_functions.py  item_utils.py  main.py  main1.py  main2.py  metric_functions.py  plot.py  plot_leximin.py  plot_time.py  pyproject.toml  requirements.txt  student.py  student2.py  test.ipynb  time_50.txt  vignesh_allocation_functions.py
ancestral_code/: main.py  plots.py
runs/: RR_SP.py
src/allocation/: agent_functions.py  allocation_functions.py  conflict_matrix.py  data_utils.py  data_utils2.py  item_functions.py  metric_functions.py  student.py  test.py  vignesh_allocation.py
undergrad_code/: README.md  inputs.py  metrics.py
