[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allocation"
version = "0.0.1"
authors = [
  { name="Paula Navarrete Diaz", email="pnavarretedi@umass.edu" },
]
description = "Various item allocation routines"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['contourpy==1.1.0',
                'cycler==0.11.0',
                'et-xmlfile==1.1.0',
                'fonttools==4.42.1',
                'importlib-resources==6.0.1',
                'kiwisolver==1.4.4',
                'matplotlib==3.7.2',
                'networkx==3.1',
                'numpy==1.24.4',
                'openpyxl==3.1.2',
                'packaging==23.1',
                'pandas==2.0.3',
                'Pillow==10.0.0',
                'pyparsing==3.0.9',
                'python-dateutil==2.8.2',
                'pytz==2023.3',
                'six==1.16.0',
                'tzdata==2023.3',
                'zipp==3.16.2']
